testando exibição de mensagem

--- a/src/main/resources/templates/agendamento/exame.html
+++ b/src/main/resources/templates/agendamento/exame.html
@@ -34,6 +34,8 @@
         </div>
 
         <button type="submit" name="enviar">Enviar</button>
+
+        <p th:text="${mensagem}"></p>
     </form>
 </body>
 </html>
